Fix blurry pieces bug

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -16,7 +16,7 @@ body div.container {
 }
 
 body div.container div#game {
-    border: 4px solid #535353;
+    border: 4px solid #5798e8;
     display: block;
     margin: 0 auto;
     position: absolute;
